# mypreter

./: Cargo.toml  README.md  build.sh
mypreter/: Cargo.toml
mypreter/src/: main.rs
proto/: Cargo.toml
proto/src/: channel.rs  comm.rs  consts.rs  encrypt.rs  error.rs  lib.rs  packet.rs  proto.rs  session.rs  utils.rs
proto/src/comm/: comm_tcp.rs
proto/src/encrypt/: enc_plain.rs
rclient/: Cargo.toml
rclient/src/: main.rs
