[package]
name = "proto"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.80"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
scc = "2.1.1"
async-channel = "2.3.1"
thiserror = "1.0.61"
anyhow = "1.0.86"
rand = "0.8.5"
